# cmudb

./: .gitignore  Cargo.toml  README.md  buffer_pool_manager.md
src/: buf.rs  buffer_pool.rs  disk.rs  lib.rs  main.rs  parser.rs  planner.rs  replacer.rs  table_heap.rs
src/catalog/: catalog.rs  index_schema.rs  mod.rs
src/index/: b_plus_page.rs  b_plus_tree.rs  context.rs  index.rs  mod.rs  page_codec.rs
src/processor/: executor.rs  executor_factory.rs  mod.rs  plan.rs
tasks/: b_plus_tree_easy_fixes.md  b_plus_tree_olc_rewrite.md  delete_page.md  project3_query_processing.md  varchar_support.md
tests/: b_plus_tree_integration.rs  buffer_pool_integration.rs  catalog_integration.rs  e2e.rs
