[package]
name = "cmudb"
version = "0.1.0"
edition = "2024"

[dependencies]
log = "0.4.29"
ordered-float = "5.3.0"
parking_lot = "0.12.5"
rand = "0.9.2"
sqlparser = "0.62.0"
tempfile = "3.23.0"

[features]
deadlock_detection = ["parking_lot/deadlock_detection"]

[dev-dependencies]
env_logger = "0.11.5"
